services/queueworker-deployment/queueworker-deployment.template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queueworker-deployment
  annotations:
    kubernetes.io/change-cause: "{ARG:CHANGE_CAUSE}"
spec:
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: queueworker
  replicas: 2 # FSTODO
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0 # FSTODO
  template:
    metadata:
      labels:
        app: queueworker
    spec:
      containers:
        - name: queueworker-ctr
          image: "gcr.io/balmy-ground-195100/gcp-fsharp-queueworker:{IMAGEID:gcp-fsharp-queueworker}"
          # Resource request intentionally less than resource limit, to ensure
          # this pod is a 'Burstable' pod, ref:
          #  https://medium.com/google-cloud/quality-of-service-class-qos-in-kubernetes-bb76a89eb2c6
          resources:
            requests:
              memory: "400Mi"
              cpu: "100m"
            limits:
              memory: "800Mi"
              cpu: "200m"
          # lifecycle:
          #   preStop:
          #     We implement the SIGTERM handler instead (even if we used preStop we'd
          #     still need to check how SIGTERM works so may as well simplify it to one
          #     concept)
          startupProbe: # has it started? Allows other probes
            httpGet:
              path: /k8s/startupProbe
              port: 13002
            failureThreshold: 24 # kill container after 2 minutes (24x5s checks)
            timeoutSeconds: 10
            periodSeconds: 5
          readinessProbe: # can it serve http requests?
            httpGet:
              path: /k8s/readinessProbe
              port: 13002
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 3
          livenessProbe: # is it still alive?
            httpGet:
              path: /k8s/livenessProbe
              port: 13002
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 3 # kill container after 30 seconds (3x10s checks)
        - name: legacy-ctr
          image: "gcr.io/balmy-ground-195100/legacyserver:{IMAGEID:legacyserver}"
          # Resource limits + requests are intentionally the same, to ensure
          # this pod is a 'Guaranteed' pod, ref:
          #  https://medium.com/google-cloud/quality-of-service-class-qos-in-kubernetes-bb76a89eb2c6
          resources:
            requests:
              memory: "1000Mi"
              cpu: "125m"
            limits:
              memory: "1000Mi"
              cpu: "125m"
          ports:
            - name: legacy-port
              containerPort: 5000
          lifecycle:
            preStop:
              httpGet:
                # ???? https://github.com/kubernetes/kubernetes/issues/56770
                path: /k8s/pkill
                port: legacy-port
          readinessProbe:
            httpGet:
              path: /k8s/readinessProbe
              port: legacy-port
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /k8s/livenessProbe
              port: legacy-port
            # Giving 2 minutes grace here, there's an outstanding k8s issue
            # preventing you from specifying "start checking liveness after an
            # ok from readiness", which is what you'd expect.
            # https://github.com/kubernetes/kubernetes/issues/27114
            initialDelaySeconds: 120
            periodSeconds: 10 # every 10 seconds
            timeoutSeconds: 10 # time out after 10 seconds
            failureThreshold: 3 # kill container after 3 successive time outs
        - name: cloudsql-proxy
          image: "gcr.io/cloudsql-docker/gce-proxy:1.25.0"
          resources:
            requests:
              memory: "500Mi"
              cpu: "125m"
            limits:
              memory: "500Mi"
              cpu: "125m"
          command: ["/cloud_sql_proxy", "-dir=/cloudsql", "-instances={BUILTIN:CLOUDSQL_INSTANCE_NAME}=tcp:5432", "-credential_file=/secrets/cloudsql/credentials.json"]
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
